# CaLM-AI

./: .gitignore  .pylintrc  Dockerfile  LICENSE  README.md  __main__.py  examples.md  index.py  main.ipynb  main.py  main_graph.py  main_langgraph.ipynb  nohup.out  pyproject.toml  requirements.txt  ruff.toml  site-package-check.py  test.py  test_langgraph_version.py  test_workflow.py
evaluation/: eval_calcu.ipynb  evaluation_metrics_comparison.csv  generate_eval_response.ipynb  generation_eval.ipynb  knowledge_base.ipynb  memory_module_demo.ipynb  response_eval.ipynb  retrieval_eval.ipynb
evaluation/tools/: calculators.py  nltk_calculators.py
pipeline/: base_pipeline_scaffold.py  calm_adrd_pipeline.py  calm_backup.py  example_config_params.py  output.json
src/: answer_generation.py  generation_rm.py  ingestion.ipynb  main.py  main_graph.py
src/beans/: GraphState.py  ReasonedDocument.py
src/checkpoints/: adaptive_decision.py  answer_generation.py  query_extander.py  retrieval_grading.py  routering.py
src/classes/: AdaptiveDecision.py  ChatSession.py  DocumentAssessment.py  Generation.py  Memory.py  ReasonedDocument.py  RequestBody.py  VectorStore.py
src/embedding/: chunking.py  embedding_models.py  script_vectorize.ipynb  vector_store.py
src/ingestion/: crawler_crawl4AI.py  pubmed_scrape_crawl4ai.ipynb  script_pubmed_pdf_marker.ipynb  text_processor_crawl4ai.ipynb
src/memory/: main.py  memory_proc.py
src/test/: __main_langgraph__.ipynb  evaluation.py  rag-test-dataset-calm-adrd.parquet  rag-test-dataset.parquet  test.py  test_calm_ai.py  test_eval.ipynb  test_fastapi_call.py  test_memory.py  test_reasoning_model.py  test_workflow.py
src/utils/: Models.py  PROMPT.py  llm_manager.py  logger.py  memory.py  pdf_downloader.py  retrieval_enhancer.py  tools.py
