[tool.poetry]
name = "langchainrag-ollama"
version = "0.1.0"
description = ""
authors = ["Drake Zhou <drakezhou97@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.8"
langchain = "^0.3.13"
langchain-community = "^0.3.13"
langchain-nomic = "^0.1.4"
langchain-ollama = "^0.2.2"
langchain-chroma = "^0.1.4"
pyarrow = "^18.1.0"
langchain-huggingface = "^0.1.2"
einops = "^0.8.0"
loguru = "^0.7.3"
bs4 = "^0.0.2"
crawl4ai = {extras = ["all"], version = "^0.4.246"}
marker-pdf = "^1.2.3"
ipykernel = "^6.29.5"
setuptools = "^75.7.0"


[tool.poetry.group.dev.dependencies]
pylint = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint]
max-line-length = 80
disable = [
    "C0111",  # missing-docstring
]
good-names = ["i", "j", "k", "ex", "Run", "_", "fp", "id"]
ignore-patterns = ["test_.*?py"]

[tool.pylint.format]
indent-after-paren = 4

[tool.pylint.messages_control]
disable = [
    "C0111",  # missing-docstring
    "C0103",  # invalid-name
    "C0330",  # bad-continuation
    "C0326",  # bad-whitespace
    "W0311",  # bad-indentation
    "W0603",  # global-statement
    "W0702",  # bare-except
    "W0621",  # redefined-outer-name
    "R0903",  # too-few-public-methods
    "R0913",  # too-many-arguments
    "R0914",  # too-many-locals
    "R0915",  # too-many-statements
]

[tool.pylint.similarities]
min-similarity-lines = 4
ignore-comments = "yes"
ignore-docstrings = "yes"
ignore-imports = "yes"

[tool.pylint.basic]
good-names-rgxs = ["^[_a-z][_a-z0-9]?$"]
