[tool.poetry]
name = "langchainrag-ollama"
version = "0.1.0"
description = ""
authors = ["Drake Zhou <drakezhou97@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.11"
langchain = "^0.3.13"
langchain-community = "^0.3.13"
langchain-nomic = "^0.1.4"
langchain-ollama = "^0.2.2"
langchain-chroma = "^0.1.4"
langchain-huggingface = "^0.1.2"
pyarrow = "^18.1.0"
einops = "^0.8.0"
loguru = "^0.7.3"
bs4 = "^0.0.2"
crawl4ai = {extras = ["all"], version = "^0.4.246"}
marker-pdf = "^1.2.3"
ipykernel = "^6.29.5"
setuptools = "^75.7.0"
langgraph = "^0.2.62"
mem0ai = "^0.1.43"

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
